# fastapidemo

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
fastapidemo/: main.py  models.py  router.py
fastapidemo/repositories/: base_service.py  config.py  contact_repository.py  course_repository.py  db_connection.py
fastapidemo/services/: contact_service.py  course_service.py
sql/: init-db.sql  init-schema.sql  test-data.sql
tests/: conftest.py  test_course_endpoints.py  test_student_endpoints.py  test_teacher_endpoints.py
