[project]
name = "fastapidemo"
version = "0.1.0"
description = ""
authors = [
    {name = "Wouter de W",email = "john@doe.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.7,<0.116.0)",
    "psycopg[binary] (>=3.2.4,<4.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "testcontainers (>=4.9.1,<5.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic[email] (>=2.10.5,<3.0.0)",
    "pytest-asyncio (>=0.25.2,<0.26.0)",
    "psycopg-pool (>=3.2.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"